[package]
name = "tabula"
version = "0.1.0"
authors = ["sp1rit <sp1rit@disroot.org>"]
edition = "2018"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
libc = "0.2"
jni = { version = "0.19", features = ["invocation"] }