[package]
name = "tabula"
version = "0.1.1"
authors = ["sp1rit <sp1rit@disroot.org>"]
edition = "2018"
description = "Rust bindings for tabulapdf/tabula-java"
license = "AGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/sp1ritCS/tabula-rs/"
keywords = ["pdf", "table", "parser", "java"]
categories = ["api-bindings", "parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
libc = "0.2"
jni = { version = "0.19", features = ["invocation"] }
